add adaptive intro

--- a/source/index.html
+++ b/source/index.html
@@ -37,7 +37,21 @@
       </div>
     </header>
     <main>
-
+      <section class="intro">
+        <picture>
+          <source media="(max-width: 1023px)" srcset="img/background-intro-tablet@1x.jpg 1x">
+          <source media="(max-width: 767px)" srcset="img/background-intro-mobile@1x.jpg 1x">
+          <img src="img/background-intro@1x.jpg" alt="observation deck">
+        </picture>
+        <div class="intro__wrapper">
+          <h1 class="intro__title title">Путешествие по Европе</h1>
+          <p class="intro__text">
+            В этом туре вы откроете для себя Европу в новом свете. Вас ждет:
+            море, горы, а также потрясающая красота природы.
+          </p>
+          <a href="#" class="intro__button button">Смотреть тур</a>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__wrapper">
@@ -103,7 +117,10 @@
             </svg>
             puteshestviemechta@gmail.ru
           </a>
-          <a href="tel:+749978468446" class="footer__contacts footer__contacts--phone">
+          <a
+            href="tel:+749978468446"
+            class="footer__contacts footer__contacts--phone"
+          >
             <svg width="30" height="30">
               <use xlink:href="img/sprite_auto.svg#icon-phone"></use>
             </svg>
@@ -112,7 +129,12 @@
         </section>
         <section class="footer__column">
           <h4 class="footer__title title">Корпоративные путешествия</h4>
-          <p class="footer__text">Также вы можете заказать индивидуальное путешествие под вашу компанию. Подобные туры очень сближают компанию, помогают поддерживать корпоративный дух, а также являются оличным времяпрепровождением</p>
+          <p class="footer__text">
+            Также вы можете заказать индивидуальное путешествие под вашу
+            компанию. Подобные туры очень сближают компанию, помогают
+            поддерживать корпоративный дух, а также являются оличным
+            времяпрепровождением
+          </p>
         </section>
       </div>
     </footer>
