fix global styles

--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,7 +7,7 @@
     <title>Путешествие по Европе</title>
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
-  <body class="page__body">
+  <body>
     <header class="header">
       <div class="header__wrapper">
         <a href="#" class="header__logo">
@@ -131,16 +131,41 @@
                   <button class="slider__button button" type="button">Купить тур сейчас</button>
                 </div>
                 <blockquote class="slider__reviews reviews">
-                    <p class="reviews__text">
-                      Метеоры в Греции можно сравнить разве что с Монсерратт в Испании. Такие же
-                      высоченные скалы. Но здесь потрясает масштаб. Огромная территория, высоко в горах.
-                      Ощущение такое, как будто стоишь на краю света!
-                    </p>
-                    <cite class="reviews__author">
-                      <img src="img/greece-cite-userpic.jpg" class="reviews__userpic" width="37" height="38" alt="Фото Влады Голициной">
-                      <span class="reviews__name">Влада Голицина</span>
-                    </cite>
-                    </blockquote>
+                  <p class="reviews__text">
+                    Метеоры в Греции можно сравнить разве что с Монсерратт в Испании. Такие же
+                    высоченные скалы. Но здесь потрясает масштаб. Огромная территория, высоко в горах.
+                    Ощущение такое, как будто стоишь на краю света!
+                  </p>
+                  <cite class="reviews__author">
+                    <img src="img/greece-cite-userpic.jpg" class="reviews__userpic" width="37" height="38" alt="Фото Влады Голициной">
+                    <span class="reviews__name">Влада Голицина</span>
+                  </cite>
+                </blockquote>
+              </li>
+              <li class="slider__item slider__item--greece">
+                <div class="slider__info">
+                  <h3 class="slider__title title">Греция</h3>
+                  <p class="slider__text">
+                    На севере Греции находится один из крупнейших комплексов монастырей,
+                    расположенных на вершинах скал. Название его Метеора буквально переводится
+                    как висящие в воздухе. Этот монастырь основная цель нашего путешествия в Греции.
+                    После покарения скал из песчанника и обломочной горной породы, достигающих
+                    в высоту 600 метров, наградой будет неописуемая красота природы и атмосфера,
+                    царящая в монастырях Метеоры.
+                  </p>
+                  <button class="slider__button button" type="button">Купить тур сейчас</button>
+                </div>
+                <blockquote class="slider__reviews reviews">
+                  <p class="reviews__text">
+                    Метеоры в Греции можно сравнить разве что с Монсерратт в Испании. Такие же
+                    высоченные скалы. Но здесь потрясает масштаб. Огромная территория, высоко в горах.
+                    Ощущение такое, как будто стоишь на краю света!
+                  </p>
+                  <cite class="reviews__author">
+                    <img src="img/greece-cite-userpic.jpg" class="reviews__userpic" width="37" height="38" alt="Фото Влады Голициной">
+                    <span class="reviews__name">Влада Голицина</span>
+                  </cite>
+                </blockquote>
               </li>
             </ul>
           </section>
