--- a/source/index.html
+++ b/source/index.html
@@ -70,7 +70,7 @@
         <picture>
           <source media="(max-width: 1023px)" srcset="img/background-intro-tablet@1x.jpg 1x">
           <source media="(max-width: 767px)" srcset="img/background-intro-mobile@1x.jpg 1x">
-          <img src="img/background-intro@1x.jpg" width="1920" height="auto" alt="observation deck">
+          <img src="img/background-intro@1x.jpg" width="1920" alt="observation deck">
         </picture>
         <div class="intro__wrapper">
           <h1 class="intro__title title">Путешествие по Европе</h1>
@@ -265,7 +265,11 @@
                 Выберите для себя лучший вариант отпуска и отдохните на все 100%!
               </p>
               <h4 class="price__subtitle">Свяжитесь с нами</h4>
-              <p class="price__phone">+7 (499) 784-684-46</p>
+              <p class="price__phone">
+                <svg width="30" height="30">
+                  <use xlink:href="img/sprite_auto.svg#icon-phone"></use>
+                </svg>
+                +7 (499) 784-684-46</p>
             </div>
             <section class="price__tariffs tariffs tariffs--complex">
               <h3 class="tariffs__title">Комплексный <span>$1999</span></h3>
@@ -291,6 +295,29 @@
               <button class="tariffs__button button" type="button">Купить тур сейчас</button>
             </section>
           </section>
+        </div>
+      </section>
+      <section class="feedback">
+        <div class="feedback__wrapper">
+          <h3 class="feedback__title title">У вас остались вопросы?</h3>
+          <p class="feedback__text">
+            Оставьте свой номер или e-mail и мы свяжемся с Вами
+          </p>
+          <form class="feedback__form form" action="https://echo.htmlacademy.ru" method="POST">
+            <ul class="form__inner">
+              <li class="form__item">
+                <label class="form__label"> +7
+                  <input class="form__input" id="phone" name="user-phone" type="tel" placeholder="Введите 10 цифр номера" required>
+                </label>
+              </li>
+              <li class="form__item">
+                <label class="form__label"> E-mail
+                  <input class="form__input" id="email" name="email" type="email">
+                </label>
+              </li>
+            </ul>
+            <button class="form__button button" type="submit">Отправить</button>
+          </form>
         </div>
       </section>
     </main>
