--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
     <!-- <link rel="preload" href="../fonts/montserrat-v15-latin_cyrillic-regular.woff2" as="font"> -->
     <title>Путешествие по Европе</title>
 
-        <!--Pixel Glass
+        <!--Pixel Glass -->
           <style>
             HTML {
               background-repeat: no-repeat;
@@ -33,7 +33,7 @@
           </style>
     <link rel="stylesheet" href="pixel-glass/styles.css" >
     <script src="/pixel-glass/script.js"></script>
-    // Pixel Glass -->
+   <!-- // Pixel Glass -->
 
 
     <link rel="stylesheet" href="css/style.min.css"/>
@@ -77,9 +77,11 @@
               море, горы, а также потрясающая красота природы.
             </p>
             <a href="#greece" class="intro__button button">Смотреть тур</a>
-          </div>
+          <div>
         </div>
       </section>
+                  <!--
+
       <section class="places">
         <div class="places__wrapper">
           <h2 class="places__title title">Mеста посещения</h2>
@@ -477,6 +479,7 @@
         </section>
       </div>
     </footer>
+    -->
     <script src="js/script.js"></script>
   </body>
 </html>
