--- a/source/index.html
+++ b/source/index.html
@@ -88,7 +88,7 @@
 
           <ul class="places__list">
             <li class="places__item">
-              <a href="#">
+              <a href="#greece" onclick="currentSlide(1)">
                 <picture>
                   <source type="image/webp" media="(max-width: 1023px)" srcset="img/greece-tablet@1x.webp 1x, img/greece-tablet@2x.webp 2x">
                   <source type="image/webp" srcset="img/greece-desktop@1x.webp 1x, img/greece-desktop@2x.webp 2x">
@@ -99,7 +99,7 @@
               </a>
             </li>
             <li class="places__item">
-              <a href="#">
+              <a href="#albania"  onclick="currentSlide(2)">
                 <picture>
                   <source type="image/webp" media="(max-width: 1023px)" srcset="img/albania-tablet@1x.webp 1x, img/albania-tablet@2x.webp 2x">
                   <source type="image/webp" srcset="img/albania-desktop@1x.webp 1x, img/albania-desktop@2x.webp 2x">
@@ -110,7 +110,7 @@
               </a>
             </li>
             <li class="places__item">
-              <a href="#">
+              <a href="#makedonia" onclick="currentSlide(3)">
                 <picture>
                   <source type="image/webp" media="(max-width: 1023px)" srcset="img/makedonia-tablet@1x.webp 1x, img/makedonia-tablet@2x.webp 2x">
                   <source type="image/webp" srcset="img/makedonia-desktop@1x.webp 1x, img/makedonia-desktop@2x.webp 2x">
@@ -121,7 +121,7 @@
               </a>
             </li>
             <li class="places__item">
-              <a href="#">
+              <a href="#montenegro" onclick="currentSlide(4)">
                 <picture>
                   <source type="image/webp" media="(max-width: 1023px)" srcset="img/montenegro-tablet@1x.webp 1x, img/montenegro-tablet@2x.webp 2x">
                   <source type="image/webp" srcset="img/montenegro-desktop@1x.webp 1x, img/montenegro-desktop@2x.webp 2x">
@@ -132,7 +132,7 @@
               </a>
             </li>
             <li class="places__item">
-              <a href="#">
+              <a href="#croatia"  onclick="currentSlide(5)">
                 <picture>
                   <source type="image/webp" media="(max-width: 1023px)" srcset="img/croatia-tablet@1x.webp 1x, img/croatia-tablet@2x.webp 2x">
                   <source type="image/webp" srcset="img/croatia-desktop@1x.webp 1x, img/croatia-desktop@2x.webp 2x">
@@ -143,78 +143,32 @@
               </a>
             </li>
           </ul>
-          <!-- <ul class="places__list">
-            <li class="places__item">
-              <a href="#greece" class="places__link" onclick="currentSlide(1)">
-                <picture>
-                  <source type="image/webp" media="(max-width: 1023px)" srcset="img/greece-tablet@1x.webp 1x, img/greece-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="img/greece@1x.webp 1x, img/greece@2x.webp 2x">
-                  <source media="(max-width: 1023px)" srcset="img/greece-tablet@1x.jpg 1x, img/greece-tablet@2x.jpg 2x">
-                  <img src="img/greece@1x.jpg" srcset="img/greece@2x.jpg 2x" class="places__image" width="350" height="430" alt="Греция">
-                </picture>
-                <span class="places__spot">Греция</span>
-              </a>
-            </li>
-            <li class="places__item">
-              <a href="#albania" class="places__link" onclick="currentSlide(2)">
-                  <picture>
-                    <source type="image/webp" media="(max-width: 1023px)" srcset="img/albania-tablet@1x.webp 1x, img/albania-tablet@2x.webp 2x">
-                    <source type="image/webp" srcset="img/albania@1x.webp 1x, img/albania@2x.webp 2x">
-                    <source media="(max-width: 1023px)" srcset="img/albania-tablet@1x.jpg 1x, img/albania-tablet@2x.jpg 2x">
-                    <img src="img/albania@1x.jpg" srcset="img/albania@2x.jpg 2x" class="places__image" width="350" height="430" alt="Албания">
-                  </picture>
-                  <span class="places__spot">Албания</span>
-              </a>
-            </li>
-            <li class="places__item">
-              <a href="#makedonia" class="places__link" onclick="currentSlide(3)">
-                <figure class="places__figure">
-                  <picture>
-                    <source type="image/webp" media="(max-width: 1023px)" srcset="img/makedonia-tablet@1x.webp 1x, img/makedonia-tablet@2x.webp 2x">
-                    <source type="image/webp" srcset="img/makedonia@1x.webp 1x, img/makedonia@2x.webp 2x">
-                    <source media="(max-width: 1023px)" srcset="img/makedonia-tablet@1x.jpg 1x, img/makedonia-tablet@2x.jpg 2x">
-                    <img src="img/makedonia@1x.jpg" srcset="img/albania@2x.jpg 2x" width="350" height="430" alt="Македония">
-                  </picture>
-                  <figcaption class="places__spot">Македония</figcaption>
-                </figure>
-              </a>
-            </li>
-            <li class="places__item">
-              <a href="#montenegro" class="places__link" onclick="currentSlide(4)">
-                <figure class="places__figure">
-                  <picture>
-                    <source type="image/webp" media="(max-width: 1023px)" srcset="img/montenegro-tablet@1x.webp 1x, img/montenegro-tablet@2x.webp 2x">
-                    <source type="image/webp" srcset="img/montenegro@1x.webp 1x, img/montenegro@2x.webp 2x">
-                    <source media="(max-width: 1023px)" srcset="img/montenegro-tablet@1x.jpg 1x, img/montenegro-tablet@2x.jpg 2x">
-                    <img src="img/montenegro@1x.jpg" srcset="img/albania@2x.jpg 2x" width="350" height="430" alt="Черногория">
-                  </picture>
-                  <figcaption class="places__spot">Черногория</figcaption>
-                </figure>
-              </a>
-            </li>
-            <li class="places__item">
-              <a href="#croatia" class="places__link" onclick="currentSlide(5)">
-                <figure class="places__figure">
-                  <picture>
-                    <source type="image/webp" media="(max-width: 1023px)" srcset="img/croatia-tablet@1x.webp 1x, img/croatia-tablet@2x.webp 2x">
-                    <source type="image/webp" srcset="img/croatia@1x.webp 1x, img/croatia@2x.webp 2x">
-                    <source media="(max-width: 1023px)" srcset="img/croatia-tablet@1x.jpg 1x, img/croatia-tablet@2x.jpg 2x">
-                    <img src="img/croatia@1x.jpg" srcset="img/croatia@2x.jpg 2x" width="350" height="430" alt="Хорватия">
-                  </picture>
-                  <figcaption class="places__spot">Хорватия</figcaption>
-                </figure>
-              </a>
-            </li>
-          </ul> -->
           <section class="places__slider slider">
-            <!--
-            <ul class="slider__nav"  draggable="true">
-              <li><a class="slider__link slider__link--active" onclick="currentSlide(1)" id="greece">Греция</a></li>
-              <li><a class="slider__link" onclick="currentSlide(2)" id="albania">Албания</a></li>
-              <li><a class="slider__link" onclick="currentSlide(3)" id="makedonia">Македония</a></li>
-              <li><a class="slider__link" onclick="currentSlide(4)" id="montenegro">Черногория</a></li>
-              <li><a class="slider__link" onclick="currentSlide(5)" id="croatia">Хорватия</a></li>
-            </ul>
+
+
+
+
+<!-- <div class="swiper-container tabs-buttons">
+  <ul class="swiper-wrapper">
+    <li class="swiper-slide active-tab">Греция</li>
+    <li class="swiper-slide">Албания</li>
+    <li class="swiper-slide">Македония</li>
+    <li class="swiper-slide">Черногория</li>
+    <li class="swiper-slide">Хорватия</li>
+  </div> -->
+
+
+
+            <h2 class="visually-hidden">Описание туров</h2>
+            <!-- <div class="slider__tabs">
+              <ul class="slider__tabs-list" draggable="true">
+                <li><a class="slider__link slider__link--active" onclick="currentSlide(1)" id="greece" data-t>Греция</a></li>
+                <li><a class="slider__link" onclick="currentSlide(2)" id="albania">Албания</a></li>
+                <li><a class="slider__link" onclick="currentSlide(3)" id="makedonia">Македония</a></li>
+                <li><a class="slider__link" onclick="currentSlide(4)" id="montenegro">Черногория</a></li>
+                <li><a class="slider__link" onclick="currentSlide(5)" id="croatia">Хорватия</a></li>
+              </ul>
+            </div> -->
             <ul class="slider__list">
               <li class="slider__item">
                 <div class="slider__info">
@@ -387,6 +341,8 @@
               </li>
             </ul>
           </section>
+                      <!--
+
           <section class="places__price price">
             <div class="price__inner">
               <h2 class="price__title title">Цены</h2>
@@ -412,7 +368,6 @@
               </ul>
               <button class="tariffs__button button" type="button">Купить тур сейчас</button>
             </section>
-                              <!--
 
             <section class="price__tariffs tariffs">
               <h3 class="tariffs__title">Экономный <span>$1399</span></h3>
@@ -537,5 +492,8 @@
     </footer>
     -->
     <script src="js/script.js"></script>
+    <script src="js/swipe.js" type="module"></script>
+    <script src="js/swiper-bundle.js"></script>
+
   </body>
 </html>
