--- a/source/index.html
+++ b/source/index.html
@@ -5,35 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <!-- <link rel="preload" href="../fonts/montserrat-v15-latin_cyrillic-regular.woff2" as="font"> -->
+    <!-- <link rel="preload" href="fonts/montserrat-v15-latin_cyrillic-regular.woff2" as="font"> -->
     <title>Путешествие по Европе</title>
-
-          <style>
-            HTML {
-              background-repeat: no-repeat;
-              background-position:  50% 0;
-              /* Mobile layout by default */
-              background-image: url( "img/1920.png" );
-            }
-            /* Tablet */
-            @media ( max-width: 768px ) {
-              HTML {
-                /* Tablet layout */
-                background-image: url( "img/768.png" );
-              }
-            }
-            /* Desktop */
-            @media ( max-width: 320px ) {
-              HTML {
-                /* Desktop layout */
-                background-image: url( "img/320.png" );
-              }
-            }
-          </style>
     <link rel="stylesheet" href="/pixel-glass/styles.css" >
     <script src="/pixel-glass/script.js"></script>
-
-
     <link rel="stylesheet" href="css/style.min.css"/>
   </head>
   <body>
@@ -68,22 +43,19 @@
     <main>
       <section class="intro">
         <div class="intro__wrapper">
-          <div class="intro__inner">
-            <h1 class="intro__title title">Путешествие по Европе</h1>
+          <div class="intro__inner"><h1 class="intro__title title">Путешествие по Европе</h1>
             <p class="intro__text">
               В этом туре вы откроете для себя Европу в новом свете. Вас ждет:
               море, горы, а также потрясающая красота природы.
             </p>
             <a href="#greece" class="intro__button button">Смотреть тур</a>
-          <div>
+          </div>
         </div>
       </section>
-
       <section class="places">
         <div class="places__wrapper">
           <h2 class="places__title title">Mеста посещения</h2>
           <p class="places__text">Вы можете выбрать полный тур или частичный, с посещением первых 3 мест</p>
-
           <ul class="places__list">
             <li class="places__item">
               <a href="#greece" onclick="currentSlide(1)">
@@ -141,9 +113,8 @@
               </a>
             </li>
           </ul>
-          <section class="places__slider slider">
-
-          <div class="swiper__container">
+          <section class="places__swiper swiper">
+          <div class="swiper-container">
             <ul class="swiper-wrapper">
               <li class="swiper-slide">
                 <a class="swiper-slide__link swiper-slide__link--active" onclick="currentSlide(1)" id="greece">Греция</a>
@@ -152,31 +123,21 @@
                 <a class="swiper-slide__link" onclick="currentSlide(2)" id="albania">Албания</a>
               </li>
               <li class="swiper-slide">
-                <a  class="swiper-slide__link" onclick="currentSlide(3)" id="makedonia">Македония</a>
-            </li>
+                <a class="swiper-slide__link" onclick="currentSlide(3)" id="makedonia">Македония</a>
+              </li>
               <li class="swiper-slide">
                 <a class="swiper-slide__link" onclick="currentSlide(4)" id="montenegro">Черногория</a></li>
               <li class="swiper-slide">
-                <a class="swiper-slide__link" onclick="currentSlide(5)" id="croatia">Хорватия</a></li>
-            </div>
-
-
-
+                <a class="swiper-slide__link" onclick="currentSlide(5)" id="croatia">Хорватия</a>
+              </li>
+            </ul>
+          </div>
             <h2 class="visually-hidden">Описание туров</h2>
-            <!-- <div class="slider__tabs">
-              <ul class="slider__tabs-list" draggable="true">
-                <li><a class="slider__link slider__link--active" onclick="currentSlide(1)" id="greece" data-t>Греция</a></li>
-                <li><a class="slider__link" onclick="currentSlide(2)" id="albania">Албания</a></li>
-                <li><a class="slider__link" onclick="currentSlide(3)" id="makedonia">Македония</a></li>
-                <li><a class="slider__link" onclick="currentSlide(4)" id="montenegro">Черногория</a></li>
-                <li><a class="slider__link" onclick="currentSlide(5)" id="croatia">Хорватия</a></li>
-              </ul>
-            </div> -->
-            <ul class="slider__list">
-              <li class="slider__item">
-                <div class="slider__info">
-                  <h3 class="slider__title title">Греция</h3>
-                  <p class="slider__text">
+            <ul class="swiper__list">
+              <li class="swiper__item">
+                <div class="swiper__info">
+                  <h3 class="swiper__title title">Греция</h3>
+                  <p class="swiper__text">
                     На севере Греции находится один из крупнейших комплексов монастырей,
                     расположенных на вершинах скал. Название его &laquo;Метеора&raquo; буквально переводится
                     как &laquo;висящие в воздухе&raquo;. Этот монастырь основная цель нашего путешествия в Греции.
@@ -184,9 +145,9 @@
                     в высоту 600 метров, наградой будет неописуемая красота природы и атмосфера,
                     царящая в монастырях Метеоры.
                   </p>
-                  <a class="slider__button button">Купить тур сейчас</a>
+                  <a class="swiper__button button">Купить тур сейчас</a>
                 </div>
-                <div class="slider__img">
+                <div class="swiper__img">
                   <picture>
                     <source type="image/webp" media="(max-width: 767px)" srcset="img/greece-bg-mobile@1x.webp 1x, img/greece-bg-mobile@2x.webp 2x">
                     <source type="image/webp" media="(max-width: 1023px)" srcset="img/greece-bg-tablet@1x.webp 1x, img/greece-bg-tablet@2x.webp 2x">
@@ -196,7 +157,7 @@
                     <img src="img/greece-bg-desktop@1x.jpg" srcset="img/greece-bg-desktop@2x.jpg 2x" width="430" height="596" alt="Пейзаж Греции">
                   </picture>
                 </div>
-                <blockquote class="slider__reviews reviews">
+                <blockquote class="swiper__reviews reviews">
                   <h4 class="reviews__title title">Отзывы</h4>
                   <p class="reviews__text">
                     Метеоры в Греции можно сравнить разве что с Монсерратт в Испании. Такие же
@@ -211,20 +172,19 @@
                     <span class="reviews__name">Влада Голицина</span>
                   </cite>
                 </blockquote>
-
               </li>
-              <li class="slider__item">
-                <div class="slider__info">
-                  <h3 class="slider__title title">Албания</h3>
-                  <p class="slider__text">
+              <li class="swiper__item">
+                <div class="swiper__info">
+                  <h3 class="swiper__title title">Албания</h3>
+                  <p class="swiper__text">
                     В Албании мы посетим Курорт Ксамиль. Этот курорт поразит вас чистейшей водой и
                     удивительным пляжем. Вначале кажется, что на пляже вас встречает обычный, правда
                     невероятно белоснежный и слишком крупный песок. Однако, присмотревшись, можно понять,
                     что это не песок, а камни, перетёртые до такого мелкого состояния.
                   </p>
-                  <button class="slider__button button" type="button">Купить тур сейчас</button>
+                  <button class="swiper__button button" type="button">Купить тур сейчас</button>
                 </div>
-                <div class="slider__img">
+                <div class="swiper__img">
                   <picture>
                     <source type="image/webp" media="(max-width: 767px)" srcset="img/albania-bg-mobile@1x.webp 1x, img/albania-bg-mobile@2x.webp 2x">
                     <source type="image/webp" media="(max-width: 1023px)" srcset="img/albania-bg-tablet@1x.webp 1x, img/albania-bg-tablet@2x.webp 2x">
@@ -234,7 +194,7 @@
                     <img src="img/albania-bg-desktop@1x.jpg" srcset="img/albania-bg-desktop@2x.jpg 2x" width="430" height="596" alt="Пейзаж Албании">
                   </picture>
                 </div>
-                <blockquote class="slider__reviews reviews">
+                <blockquote class="swiper__reviews reviews">
                   <h4 class="reviews__title title">Отзывы</h4>
                   <p class="reviews__text">
                     Замечательный курорт, обязательно стоит посетить.
@@ -249,17 +209,17 @@
                   </cite>
                 </blockquote>
               </li>
-              <li class="slider__item">
-                <div class="slider__info">
-                  <h3 class="slider__title title">Македония</h3>
-                  <p class="slider__text">
+              <li class="swiper__item">
+                <div class="swiper__info">
+                  <h3 class="swiper__title title">Македония</h3>
+                  <p class="swiper__text">
                     В Македонии нашей целью будет посетить Палаошник, который расположился в удивительно красивой лесистой местности возле
                     Охридского озера и Самуиловой твердыни. А также мы заберемся на вершину горы Татичев Камен где находится
                     археологический памятник Кокино в длину около 100 метров.
                   </p>
-                  <button class="slider__button button" type="button">Купить тур сейчас</button>
+                  <button class="swiper__button button" type="button">Купить тур сейчас</button>
                 </div>
-                <div class="slider__img">
+                <div class="swiper__img">
                   <picture>
                     <source type="image/webp" media="(max-width: 767px)" srcset="img/makedonia-bg-mobile@1x.webp 1x, img/makedonia-bg-mobile@2x.webp 2x">
                     <source type="image/webp" media="(max-width: 1023px)" srcset="img/makedonia-bg-tablet@1x.webp 1x, img/makedonia-bg-tablet@2x.webp 2x">
@@ -269,7 +229,7 @@
                     <img src="img/makedonia-bg-desktop@1x.jpg" srcset="img/makedonia-bg-desktop@2x.jpg 2x" width="430" height="596" alt="Пейзаж Македонии">
                   </picture>
                 </div>
-                <blockquote class="slider__reviews reviews">
+                <blockquote class="swiper__reviews reviews">
                   <h4 class="reviews__title title">Отзывы</h4>
                   <p class="reviews__text">
                     Я бы сказал необычное старое здание. В архитектуре я не разбираюсь, но подъем в гору был очень
@@ -285,16 +245,16 @@
                   </cite>
                 </blockquote>
               </li>
-              <li class="slider__item">
-                <div class="slider__info">
-                  <h3 class="slider__title title">Черногория</h3>
-                  <p class="slider__text">
+              <li class="swiper__item">
+                <div class="swiper__info">
+                  <h3 class="swiper__title title">Черногория</h3>
+                  <p class="swiper__text">
                     Черногория удивит нас самым большим в Европе каньоном реки Тара, который в некоторых местах высотой берегов доходит
                     до 1300 метров, а шириной не превышает трех. При этом длина каньона составляет 80 км.
                   </p>
-                  <button class="slider__button button" type="button">Купить тур сейчас</button>
+                  <button class="swiper__button button" type="button">Купить тур сейчас</button>
                 </div>
-                <div class="slider__img">
+                <div class="swiper__img">
                   <picture>
                     <source type="image/webp" media="(max-width: 767px)" srcset="img/montenegro-bg-mobile@1x.webp 1x, img/montenegro-bg-mobile@2x.webp 2x">
                     <source type="image/webp" media="(max-width: 1023px)" srcset="img/montenegro-bg-tablet@1x.webp 1x, img/montenegro-bg-tablet@2x.webp 2x">
@@ -304,7 +264,7 @@
                     <img src="img/montenegro-bg-desktop@1x.jpg" srcset="img/montenegro-bg-desktop@2x.jpg 2x" width="430" height="596" alt="Пейзаж Черногории">
                   </picture>
                 </div>
-                <blockquote class="slider__reviews reviews">
+                <blockquote class="swiper__reviews reviews">
                   <h4 class="reviews__title title">Отзывы</h4>
                   <p class="reviews__text">
                     Неописуемой красоты каньон! Ничего прекраснее в жизни не видела, разве что в фильмах :) Всем советую
@@ -318,17 +278,17 @@
                   </cite>
                 </blockquote>
               </li>
-              <li class="slider__item">
-                <div class="slider__info">
-                  <h3 class="slider__title title">Хорватия</h3>
-                  <p class="slider__text">
+              <li class="swiper__item">
+                <div class="swiper__info">
+                  <h3 class="swiper__title title">Хорватия</h3>
+                  <p class="swiper__text">
                     В Хорватии мы посетим необычайную пещеру названную Бередине. Ее подземный мир увлечет вас на 80-ти метровую глубину
                     через 5 освещенных залов, украшенных удивительными нерукотворными скульптурами &mdash; сталактитами и сталагмитами&
                     &mdash; формировавшимися тысячи и тысячи лет.
                   </p>
-                  <button class="slider__button button" type="button">Купить тур сейчас</button>
+                  <button class="swiper__button button" type="button">Купить тур сейчас</button>
                 </div>
-                  <div class="slider__img">
+                  <div class="swiper__img">
                     <picture>
                     <source type="image/webp" media="(max-width: 767px)" srcset="img/croatia-bg-mobile@1x.webp 1x, img/croatia-bg-mobile@2x.webp 2x">
                     <source type="image/webp" media="(max-width: 1023px)" srcset="img/croatia-bg-tablet@1x.webp 1x, img/croatia-bg-tablet@2x.webp 2x">
@@ -355,7 +315,6 @@
               </li>
             </ul>
           </section>
-
           <section class="places__price price">
             <div class="price__inner">
               <h2 class="price__title title">Цены</h2>
@@ -381,7 +340,6 @@
               </ul>
               <button class="tariffs__button button" type="button">Купить тур сейчас</button>
             </section>
-
             <section class="price__tariffs tariffs">
               <h3 class="tariffs__title">Экономный <span>$1399</span></h3>
               <p class="tariffs__text">Ознакомьтесь с перечнем того, что входит в данный пакет</p>
@@ -397,7 +355,6 @@
           </section>
         </div>
       </section>
-
       <section class="feedback">
         <div class="feedback__bg">
         </div>
@@ -480,10 +437,7 @@
             </svg>
             puteshestviemechta@gmail.ru
           </a>
-          <a
-            href="tel:+749978468446"
-            class="footer__contacts footer__contacts--phone"
-          >
+          <a href="tel:+749978468446" class="footer__contacts footer__contacts--phone">
             <svg width="30" height="30">
               <use xlink:href="img/sprite_auto.svg#icon-phone"></use>
             </svg>
@@ -504,6 +458,5 @@
     <script src="js/script.js"></script>
     <script src="js/swipe.js" type="module"></script>
     <script src="js/swiper-bundle.js"></script>
-
   </body>
 </html>
