--- a/source/index.html
+++ b/source/index.html
@@ -601,22 +601,27 @@
           </ul>
         </section>
         <section class="footer__column footer__column--second">
-          <h4 class="footer__title title">Наши контакты</h4>
-          <a href="mailto:puteshestviemechta@gmail.ru" class="footer__contacts">
-            <svg width="26" height="20">
-              <use xlink:href="img/sprite_auto.svg#icon-email"></use>
-            </svg>
-            puteshestviemechta@gmail.ru
-          </a>
-          <a
-            href="tel:+749978468446"
-            class="footer__contacts footer__contacts--phone"
-          >
-            <svg width="30" height="30">
-              <use xlink:href="img/sprite_auto.svg#icon-phone"></use>
-            </svg>
-            +7 (499) -784-684-46
-          </a>
+          <div class="footer__column-inner">
+            <h4 class="footer__title title">Наши контакты</h4>
+            <a
+              href="mailto:puteshestviemechta@gmail.ru"
+              class="footer__contacts"
+            >
+              <svg width="26" height="20">
+                <use xlink:href="img/sprite_auto.svg#icon-email"></use>
+              </svg>
+              puteshestviemechta@gmail.ru
+            </a>
+            <a
+              href="tel:+749978468446"
+              class="footer__contacts footer__contacts--phone"
+            >
+              <svg width="30" height="30">
+                <use xlink:href="img/sprite_auto.svg#icon-phone"></use>
+              </svg>
+              +7 (499) -784-684-46
+            </a>
+          </div>
         </section>
         <section class="footer__column footer__column--third">
           <h4 class="footer__title title">Корпоративные путешествия</h4>
