--- a/source/index.html
+++ b/source/index.html
@@ -634,8 +634,6 @@
         </section>
       </div>
     </footer>
-    <!-- <script src="js/script.js"></script> -->
-    <!-- <script src="js/swipe.js" type="module"></script> -->
-    <!-- <script src="js/swiper-bundle.js"></script> -->
+    <script src="js/script.js"></script>
   </body>
 </html>
