--- a/source/index.html
+++ b/source/index.html
@@ -118,19 +118,19 @@
           <section class="places__slider slider">
             <ul class="slider__tabs">
               <li class="slider__tab">
-                <a class="slider__link slider__link--active" onclick="currentSlide(1)" id="greece">Греция</a>
+                <button class="slider__link slider__link--active" onclick="currentSlide(1)" id="greece">Греция</button>
               </li>
               <li class="slider__tab">
-                <a class="slider__link" onclick="currentSlide(2)" id="albania">Албания</a>
+                <button class="slider__link" onclick="currentSlide(2)" id="albania">Албания</button>
               </li>
               <li class="slider__tab">
-                <a class="slider__link" onclick="currentSlide(3)" id="makedonia">Македония</a>
+                <button class="slider__link" onclick="currentSlide(3)" id="makedonia">Македония</button>
               </li>
               <li class="slider__tab">
-                <a class="slider__link" onclick="currentSlide(4)" id="montenegro">Черногория</a>
+                <button class="slider__link" onclick="currentSlide(4)" id="montenegro">Черногория</button>
               </li>
               <li class="slider__tab">
-                <a class="slider__link" onclick="currentSlide(5)" id="croatia">Хорватия</a>
+                <button class="slider__link" onclick="currentSlide(5)" id="croatia">Хорватия</button>
               </li>
             </ul>
             <h2 class="visually-hidden">Описание туров</h2>
