fix desktop intro

--- a/source/index.html
+++ b/source/index.html
@@ -40,7 +40,24 @@
     </header>
     <main>
       <section class="intro">
-        <div class="intro__wrapper">
+        <div class="intro__img">
+          <picture>
+            <source type="image/webp" media="(max-width: 767px)" srcset="img/intro-bg-mobile@1x.webp 1x, img/intro-bg-mobile@2x.webp 2x">
+            <source type="image/webp" media="(max-width: 1023px)" srcset="img/intro-bg-tablet@1x.webp 1x, img/intro-bg-tablet@2x.webp 2x">
+            <source media="(max-width: 767px)" srcset="img/intro-bg-mobile@1x.jpg 1x, img/intro-bg-mobile@2x.jpg 2x">
+            <source media="(max-width: 1023px)" srcset="img/intro-bg-tablet@1x.jpg 1x, img/intro-bg-tablet@2x.jpg 2x">
+            <img src="img/intro-bg-desktop@1x.jpg" srcset="img/intro-bg-desktop@2x.jpg 2x" width="1920" height="860" alt="Observation deck">
+          </picture>
+        </div>
+        <div class="intro__inner">
+          <h1 class="intro__title title">Путешествие по Европе</h1>
+            <p class="intro__text">
+              В этом туре вы откроете для себя Европу в новом свете. Вас ждет:
+              море, горы, а также потрясающая красота природы.
+            </p>
+            <a href="#greece" class="intro__button button">Смотреть тур</a>
+        </div>
+        <!-- <div class="intro__wrapper">
           <div class="intro__inner">
             <h1 class="intro__title title">Путешествие по Европе</h1>
             <p class="intro__text">
@@ -49,9 +66,9 @@
             </p>
             <a href="#greece" class="intro__button button">Смотреть тур</a>
           </div>
-        </div>
+        </div> -->
       </section>
-      <section class="places">
+      <!-- <section class="places">
         <div class="places__wrapper">
           <h2 class="places__title title">Mеста посещения</h2>
           <p class="places__text">
@@ -341,8 +358,8 @@
                   </blockquote>
               </li>
             </ul>
-          </section>
-          <section class="places__price price">
+          </section> -->
+          <!-- <section class="places__price price">
             <div class="price__inner">
               <h2 class="price__title title">Цены</h2>
               <p class="price__text">
@@ -404,8 +421,8 @@
             </section>
           </section>
         </div>
-      </section>
-      <section class="feedback">
+      </section> -->
+      <!-- <section class="feedback">
         <div class="feedback__bg"></div>
         <div class="feedback__inner">
           <h3 class="feedback__title title">У вас остались вопросы?</h3>
@@ -420,9 +437,9 @@
             <button class="form__button button" type="submit">Отправить</button>
           </form>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="footer__wrapper">
         <section class="footer__column footer__column--first">
           <h4 class="footer__title title">Следующие путешествия</h4>
@@ -511,7 +528,7 @@
           </p>
         </section>
       </div>
-    </footer>
-    <script src="js/script.js"></script>
+    </footer> -->
+    <!-- <script src="js/script.js"></script> -->
   </body>
 </html>
