--- a/source/index.html
+++ b/source/index.html
@@ -42,10 +42,10 @@
       <section class="intro">
         <div class="intro__img">
           <picture>
-            <source type="image/webp" media="(max-width: 767px)" srcset="img/intro-bg-mobile@1x.webp 1x, img/intro-bg-mobile@2x.webp 2x">
-            <source type="image/webp" media="(max-width: 1023px)" srcset="img/intro-bg-tablet@1x.webp 1x, img/intro-bg-tablet@2x.webp 2x">
-            <source media="(max-width: 767px)" srcset="img/intro-bg-mobile@1x.jpg 1x, img/intro-bg-mobile@2x.jpg 2x">
-            <source media="(max-width: 1023px)" srcset="img/intro-bg-tablet@1x.jpg 1x, img/intro-bg-tablet@2x.jpg 2x">
+            <!-- <source type="image/webp" media="(max-width: 767px)" srcset="img/intro-bg-mobile@1x.webp 1x, img/intro-bg-mobile@2x.webp 2x"> -->
+            <!-- <source type="image/webp" media="(max-width: 1023px)" srcset="img/intro-bg-tablet@1x.webp 1x, img/intro-bg-tablet@2x.webp 2x"> -->
+            <!-- <source media="(max-width: 767px)" srcset="img/intro-bg-mobile@1x.jpg 1x, img/intro-bg-mobile@2x.jpg 2x"> -->
+            <!-- <source media="(max-width: 1023px)" srcset="img/intro-bg-tablet@1x.jpg 1x, img/intro-bg-tablet@2x.jpg 2x"> -->
             <img src="img/intro-bg-desktop@1x.jpg" srcset="img/intro-bg-desktop@2x.jpg 2x" width="1920" height="860" alt="Observation deck">
           </picture>
         </div>
@@ -529,6 +529,6 @@
         </section>
       </div>
     </footer> -->
-    <!-- <script src="js/script.js"></script> -->
+    <script src="js/script.js"></script>
   </body>
 </html>
